<resources>
    <string name="app_name">CodeOnAndroid</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_app_main">Code on android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_leader">LeaderBoard</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="menu_help">FAQ/Help</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_rate">Rate the app</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_login">Log in</string>

    <string name="email">Email</string>
    <string-array name="items">
        <item>Python 3</item>
        <item>C++</item>
        <item>Java</item>

    </string-array>
    <string-array name="values">
        <item>python3</item>
        <item>cpp</item>
        <item>java</item>
        <item>csharp</item>
        <item>php</item>
    </string-array>


</resources>
