<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/leader_board"
            android:icon="@drawable/leader_board"
            android:title="@string/menu_leader" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/setting_ico"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/help_ico"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about_ic"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/rate"
            android:icon="@drawable/rate_ico"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/feedback_ico"
            android:title="@string/menu_feedback" />
        <item android:id="@+id/logout"
            android:title="@string/menu_logout"
            android:icon="@drawable/logout_ic"
            />
        <item
            android:id="@+id/exit"
            android:icon="@drawable/exit_ico"
            android:title="@string/menu_exit" />
    </group>



</menu>
